<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/add_new_employee"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"

        />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/First_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Employee_name"
        android:layout_margin="15sp"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterName"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Employee_name"
        android:layout_alignStart="@+id/Last_name"

        android:layout_alignLeft="@+id/Last_name"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="7dp"
        android:hint="@string/enter_your_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/First_name"
        android:layout_margin="15sp"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterLastName"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/First_name"
        android:layout_alignStart="@+id/Last_name"

        android:layout_alignLeft="@+id/Last_name"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="7dp"
        android:hint="@string/enter_your_last_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWorkEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Last_name"
        android:layout_margin="15sp"
        android:text="@string/work_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edWorkEmail"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterLastName"
        android:layout_alignStart="@+id/Last_name"
        android:layout_alignLeft="@+id/Last_name"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="7dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edPurpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWorkEmail"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"

        android:layout_marginTop="10dp"
        android:text="@string/this_is_also_used_as_login_coding"
        android:textSize="20sp" />


</RelativeLayout>
